0L Network to OpenLibra

--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -46,15 +46,15 @@ Regular Markdown images are supported.
 You can use absolute paths to reference images in the static directory (`static/img/0LNetwork.png`):
 
 ```md
-![0L Network logo](/img/0LNetwork.png)
+![OpenLibra logo](/img/0LNetwork.png)
 ```
 
-![0L Network logo](/img/0LNetwork.png)
+![OpenLibra logo](/img/0LNetwork.png)
 
 You can reference images relative to the current file as well. This is particularly useful to colocate images close to the Markdown files using them:
 
 ```md
-![0L Network logo](./img/0LNetwork.png)
+![OpenLibra logo](./img/0LNetwork.png)
 ```
 
 ## Code Blocks
